switching to gradle build